--- a/src/views/pages/search.pug
+++ b/src/views/pages/search.pug
@@ -57,3 +57,4 @@ block content
                   |Показать еще
                 .button-show__icon 
                   +arrow-svg.button-show__svg
+  +product-modal
