--- a/src/assets/styles/modules/range.scss
+++ b/src/assets/styles/modules/range.scss
@@ -25,6 +25,12 @@
 
     border: 1px solid $color-light-gray;
     border-radius: 4px;
+
+    transition: $transition;
+
+    &.error {
+      border-color: $color-red;
+    }
   }
 
   &__text {
