--- a/src/assets/styles/modules/button.scss
+++ b/src/assets/styles/modules/button.scss
@@ -103,4 +103,12 @@
       padding: 6px 0;
     }
   }
+
+  &--btn {
+    font-size: 14px;
+
+    @media (min-width: $breakpoint) {
+      font-size: 16px;
+    }
+  }
 }
