fix button, build

--- a/src/views/pages/search.pug
+++ b/src/views/pages/search.pug
@@ -27,8 +27,11 @@ block content
             .search-page__col 
               input.search-page__input(type="text" value = 'B1-3')
             .search-page__col 
-              +button.button--wide.button--search
+              //- +button.button--wide.button--search
+
+              button.button.button--wide.button--btn
                 |Поиск
+
         .section__row.margin-top
           .section__col
             .search-page__aside
