--- a/src/assets/styles/modules/product-card.scss
+++ b/src/assets/styles/modules/product-card.scss
@@ -34,13 +34,21 @@
     position: relative;
     z-index: 0;
 
-    display: block;
+    // display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @media (max-width: ($breakpoint-m - 1px)) {
+      height: 150px;
+    }
+
+    @media (min-width: $breakpoint-m) and (max-width: ($breakpoint - 1px)) {
+      height: 250px;
+    }
 
     @media (min-width: $breakpoint) {
       padding: 80px 40px 20px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
 
       img {
         max-height: 175px;
