--- a/src/assets/styles/helpers/helpers.scss
+++ b/src/assets/styles/helpers/helpers.scss
@@ -32,7 +32,7 @@ $ff-3: 'BonVivant', sans-serif;
 $breakpoint-xs: 375px;
 $breakpoint-s: 576px;
 $breakpoint-m: 768px;
-$breakpoint-m: 768px;
+// $breakpoint-m: 768px;
 // $breakpoint: 1024px;
 $breakpoint-t: 960px;
 $breakpoint: 1280px;
