--- a/src/views/components/product-card.pug
+++ b/src/views/components/product-card.pug
@@ -11,7 +11,7 @@ mixin product-card
     .product-card__inner
       .product-card__label 
         |1 шт. в наличии
-      .product-card__title 
+      a.product-card__title(href='')
         |Раскатник R-D TICN 376 ISO2X M14X2 2P
       .product-card__info 
         ul.product-card__list
