--- a/src/views/pages/cart.pug
+++ b/src/views/pages/cart.pug
@@ -43,11 +43,11 @@ block content
                 li.cart-page__item 
                   .cart-page__item-row 
                     .cart-page__item-col
-                      .cart-page__item-image 
+                      a.cart-page__item-image(href='')
                         img(src="assets/images/product.jpg", alt="")
                       .cart-page__item-container 
                         .cart-page__item-content
-                          .cart-page__item-text 
+                          a.cart-page__item-text(href='')
                             |Раскатник R-D TICN 376 ISO2X M14X2 2P
                           .cart-page__item-label 
                             |Артикул: 9353014BTC
