--- a/src/assets/styles/modules/counter.scss
+++ b/src/assets/styles/modules/counter.scss
@@ -33,6 +33,8 @@
     cursor: pointer;
     transition: $transition;
 
+    user-select: none;
+
     &:first-child {
       border-radius: 4px 0 0 4px;
       border-right: none;
