--- a/src/views/pages/instruments-card.pug
+++ b/src/views/pages/instruments-card.pug
@@ -41,7 +41,7 @@ block content
     section.instruments-card__section
       .container
         .instruments-card__section-row 
-          .instruments-card__section-col
+          .instruments-card__section-col(data-controls-hide='')
             .instruments-card__section-breadcrumbs 
               .breadcrumbs
                 ul.breadcrumbs__list
@@ -55,15 +55,15 @@ block content
             .instruments-card__section-slider
               .swiper-container.swiper-container--visible--mobile.swiper-container--slide-width-auto.swiper-container--slide-height-max(data-slider-id='10' data-slider-prev='13' data-slider-next='14')
                 .swiper-wrapper 
-                  - for (i = 0; i < 6; i++)
-                    .swiper-slide
-                      .instruments-card__img-container
-                        img.instruments-card__section-img(src="assets/images/instrument-slide-1.jpg", alt="")
-                    .swiper-slide
-                      .instruments-card__img-container
-                        img.instruments-card__section-img(src="assets/images/instrument-slide-2.jpg", alt="")
+                  //- - for (i = 0; i < 6; i++)
+                  .swiper-slide
+                    .instruments-card__img-container
+                      img.instruments-card__section-img(src="assets/images/instrument-slide-1.jpg", alt="")
+                  //- .swiper-slide
+                  //-   .instruments-card__img-container
+                  //-     img.instruments-card__section-img(src="assets/images/instrument-slide-2.jpg", alt="")
                 .swiper-pagination
-            .instruments-card__section-buttons
+            .instruments-card__section-buttons(data-controls='')
               +slider-buttons.slider-buttons--small(prev = '13' next = '14')
           .instruments-card__section-col
             .instruments-card__section-info
