--- a/src/views/pages/publications-article.pug
+++ b/src/views/pages/publications-article.pug
@@ -70,14 +70,14 @@ block content
               p.publications-page__section-text 
                 |После окончания пиления заготовок обязательно очищайте рабочий стол, ведущий и ведомый шкивы станка от накопившейся стружки. Периодически проверяйте ведущий и ведомый шкивы станка на параллельность и отсутствие биений, а также износ твердосплавных пластин и подшипников направляющих. Своевременно меняйте щётку очистки пилы и СОЖ.
           .margin-top 
-            .publications-page__section-slider 
+            .publications-page__section-slider(data-controls-hide='')
               .publications-page__slider
                 .swiper-container.swiper-container--visible--mobile.swiper-container--slide-width-auto.swiper-container--slide-height-max(data-slider-id='10' data-slider-prev='13' data-slider-next='14')
                   .swiper-wrapper 
-                    - for (i = 0; i < 6; i++)
-                      .swiper-slide.publications-page__slider-slide
-                        img.publications-page__slider-img(src="assets/images/publication-2.jpg", alt="")
-              .publications-page__section-buttons
+                    //- - for (i = 0; i < 6; i++)
+                    .swiper-slide.publications-page__slider-slide
+                      img.publications-page__slider-img(src="assets/images/publication-2.jpg", alt="")
+              .publications-page__section-buttons(data-controls='')
                 +slider-buttons.slider-buttons--small.slider-buttons--wide(prev = '13' next = '14')
           a.publications-page__button.margin-top(href="#") 
             .publications-page__button-icon
