--- a/src/views/pages/publications-detail.pug
+++ b/src/views/pages/publications-detail.pug
@@ -50,14 +50,14 @@ block content
           .publications-page__section-img.margin-top
             img(src="assets/images/publication.jpg", alt="")
           .margin-top 
-            .publications-page__section-slider 
+            .publications-page__section-slider(data-controls-hide='')
               .publications-page__slider
                 .swiper-container.swiper-container--visible--mobile.swiper-container--slide-width-auto.swiper-container--slide-height-max(data-slider-id='10' data-slider-prev='13' data-slider-next='14')
                   .swiper-wrapper 
                     - for (i = 0; i < 6; i++)
                       .swiper-slide.publications-page__slider-slide
                         img.publications-page__slider-img(src="assets/images/publication-2.jpg", alt="")
-              .publications-page__section-buttons
+              .publications-page__section-buttons(data-controls='')
                 +slider-buttons.slider-buttons--small.slider-buttons--wide(prev = '13' next = '14')
           a.publications-page__button.margin-top(href="#") 
             .publications-page__button-icon
