--- a/src/views/components/accordion.pug
+++ b/src/views/components/accordion.pug
@@ -58,8 +58,8 @@ mixin accordion
               .tooltip
                 .accordion__price.tooltip__row 
                   |₽ 93.42
-                  span.tooltip__span
+                  //- span.tooltip__span
                     .tooltip__icon 
                       +tooltip-svg.tooltip__svg
-                .tooltip__container   
+                //- .tooltip__container   
                   |#{data.tooltipText}
