--- a/src/views/components/aside.pug
+++ b/src/views/components/aside.pug
@@ -59,10 +59,10 @@ mixin aside
                       .tooltip
                         .checkbox__text.tooltip__row
                           |ISO2X
-                          span.tooltip__span
+                          //- span.tooltip__span
                             .tooltip__icon 
                               +tooltip-svg.tooltip__svg
-                        .tooltip__container   
+                        //- .tooltip__container   
                           |#{data.tooltipText}
         .aside__card
           .aside__container 
