--- a/src/views/components/product-card.pug
+++ b/src/views/components/product-card.pug
@@ -34,10 +34,10 @@ mixin product-card
         .tooltip
           .product-card__price-price.tooltip__row  
             |₽ 93.42
-            span.tooltip__span
+            //- span.tooltip__span
               .tooltip__icon 
                 +tooltip-svg.tooltip__svg
-          .tooltip__container   
+          //- .tooltip__container   
             |#{data.tooltipText}
         .product-card__price-old
           |₽ 103.55
