--- a/src/views/pages/booking-2.pug
+++ b/src/views/pages/booking-2.pug
@@ -54,10 +54,10 @@ block content
                           .tooltip
                             .cart-page__item-price.tooltip__row
                               |₽ 93.42
-                              span.tooltip__span
+                              //- span.tooltip__span
                                 .tooltip__icon 
                                   +tooltip-svg.tooltip__svg
-                            .tooltip__container   
+                            //- .tooltip__container   
                               |#{data.tooltipText}
                       .cart-page__item-col
                         .cart-page__item-container
