--- a/src/views/pages/cart.pug
+++ b/src/views/pages/cart.pug
@@ -62,10 +62,10 @@ block content
                         .tooltip
                           .cart-page__item-price.tooltip__row
                             |₽ 93.42
-                            span.tooltip__span
+                            //- span.tooltip__span
                               .tooltip__icon 
                                 +tooltip-svg.tooltip__svg
-                          .tooltip__container   
+                          //- .tooltip__container   
                             |#{data.tooltipText}
                         .cart-page__item-old 
                           |₽ 103.55
@@ -108,10 +108,10 @@ block content
                         .tooltip
                           .cart-page__card-text.tooltip__row
                             |1222.45
-                            span.tooltip__span
+                            //- span.tooltip__span
                               .tooltip__icon 
                                 +tooltip-svg
-                          .tooltip__container   
+                          //- .tooltip__container   
                             |Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consectetur deserunt cumque?
               .cart-page__card-bot
                 .cart-page__card-row 
