--- a/src/views/pages/cart-auth.pug
+++ b/src/views/pages/cart-auth.pug
@@ -54,10 +54,10 @@ block content
                         .tooltip
                           .cart-page__item-price.tooltip__row
                             |₽ 93.42
-                            span.tooltip__span
+                            //- span.tooltip__span
                               .tooltip__icon 
                                 +tooltip-svg.tooltip__svg
-                          .tooltip__container   
+                          //- .tooltip__container   
                             |#{data.tooltipText}
                         .cart-page__item-old 
                           |₽ 103.55
@@ -100,10 +100,10 @@ block content
                         .tooltip
                           .cart-page__card-text.tooltip__row
                             |1222.45
-                            span.tooltip__span
+                            //- span.tooltip__span
                               .tooltip__icon 
                                 +tooltip-svg
-                          .tooltip__container   
+                          //- .tooltip__container   
                             |#{data.tooltipText}
               .cart-page__card-bot
                 ul.cart-page__card-list
