--- a/src/views/pages/instruments-card.pug
+++ b/src/views/pages/instruments-card.pug
@@ -87,10 +87,10 @@ block content
                   .tooltip.tooltip--start
                     .instruments-card__price-price.tooltip__row
                       |₽ 17.79
-                      span.tooltip__span
+                      //- span.tooltip__span
                         .tooltip__icon 
                           +tooltip-svg.tooltip__svg
-                    .tooltip__container   
+                    //- .tooltip__container   
                       |#{data.tooltipText}
                   .instruments-card__price-old 
                     |₽ 20.55
