--- a/src/views/pages/booking-2.pug
+++ b/src/views/pages/booking-2.pug
@@ -34,7 +34,8 @@ block content
                     .cart-page__item-row 
                       .cart-page__item-col
                         .cart-page__item-image 
-                          img(src="assets/images/product.jpg", alt="")
+                          .cart-page__item-img
+                            img(src="assets/images/product.jpg", alt="")
                         .cart-page__item-container 
                           .cart-page__item-content
                             .cart-page__item-text 
