--- a/src/views/pages/cart.pug
+++ b/src/views/pages/cart.pug
@@ -44,7 +44,8 @@ block content
                   .cart-page__item-row 
                     .cart-page__item-col
                       a.cart-page__item-image(href='')
-                        img(src="assets/images/product.jpg", alt="")
+                        .cart-page__item-img
+                          img(src="assets/images/product.jpg", alt="")
                       .cart-page__item-container 
                         .cart-page__item-content
                           a.cart-page__item-text(href='')
