--- a/src/assets/styles/modules/breadcrumbs.scss
+++ b/src/assets/styles/modules/breadcrumbs.scss
@@ -21,11 +21,13 @@
   }
 
   &__list {
+    width: 100%;
     display: flex;
     flex-shrink: 0;
     flex-wrap: wrap;
     @media (max-width: ($breakpoint - 1px)) {
       flex-wrap: nowrap;
+      width: auto;
     }
   }
 
