--- a/src/assets/styles/pages/cart-page.scss
+++ b/src/assets/styles/pages/cart-page.scss
@@ -388,6 +388,25 @@
       flex-shrink: 0;
     }
   }
+  &__item-img {
+    padding: 0 12px;
+    @media (max-width: ($breakpoint - 1px)) {
+      padding: 0 9px;
+    }
+
+    max-width: 120px;
+    max-height: 85px;
+    @media (max-width: ($breakpoint - 1px)) {
+      max-width: 100%;
+      max-height: 100%;
+      min-height: 50px;
+    }
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   &__item-container {
     padding: 20px 0;
     @media (max-width: ($breakpoint - 1px)) {
