--- a/src/views/pages/docs.pug
+++ b/src/views/pages/docs.pug
@@ -49,7 +49,7 @@ block content
                       each item in data.selectValues.cat
                         option(value=item)
                           |#{item} 
-                    select.select__select(data-select-placeholder='Выберите категорию' style='width: 100%' data-select-control='')
+                    select.select__select(data-select-placeholder='Выберите категорию' style='width: 100%')
                       option(value='' disabled selected)
                       each item in data.selectValues.cat
                         option(value=item)
