--- a/src/assets/styles/modules/aside.scss
+++ b/src/assets/styles/modules/aside.scss
@@ -126,4 +126,109 @@
     margin-top: 8px;
     display: none;
   }
+
+  &__top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__clear {
+    display: flex;
+    align-items: center;
+
+    cursor: pointer;
+    transition: $transition;
+
+    &.hidden {
+      opacity: 0;
+      pointer-events: none;
+    }
+  }
+  &__clear-svg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &__clear-text {
+    @include fsl(14px, 140%);
+    color: $color-gray;
+  }
+  
+  &__selects {
+    display: flex;
+    align-items: center;
+  }
+
+  &__select {
+    width: 100%;
+  }
+
+  &__char {
+    margin: 0 12px;
+
+    @include fsl(14px, 140%);
+  }
+
+  &__spoiler {
+    position: relative;
+    z-index: 2;
+
+    border: 1px solid $color-light-gray;
+    border-radius: 4px;
+    transition: $transition;
+
+    &.active {
+      border-color: $color-blue;
+      border-radius: 4px 4px 0 0;
+
+      #{$comp}__spoiler-svg {
+        transform: rotate(180deg);
+
+        path {
+          stroke: $color-blue;
+        }
+      }
+    }
+  }
+  &__spoiler-top {
+    padding: 8px 12px;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    cursor: pointer;
+  }
+  &__spoiler-text {
+    @include fsl(14px, 140%);
+  }
+  &__spoiler-icon {
+    margin-left: 10px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &__spoiler-svg {
+    transition: $transition;
+
+    path {
+      transition: $transition;
+    }
+  }
+  &__spoiler-dropdown {
+    padding: 12px;
+    position: absolute;
+    z-index: 2;
+    top: 100%;
+    left: -1px;
+    right: -1px;
+
+    display: none;
+
+    background: $color-white;
+    border: 1px solid $color-blue;
+    border-top: 1px solid $color-light-gray;
+  }
 }
