--- a/src/views/components/aside.pug
+++ b/src/views/components/aside.pug
@@ -3,16 +3,8 @@ mixin aside
     -
       var ddata = [
         {
-          title: 'Материал детали',
-          items: ['Углеродистая сталь', 'Нержавеющая сталь', 'Чугун']
-        },
-        {
           title: 'Cерия фрезы',
           items: ['Оsawa alu по алюминию', 'Osawa G2 общего назначения с покрытием PV200', 'Osawa HF высокопроизводительные']
-        },
-        {
-          title: 'Тип фрезы',
-          items: ['Острая кромка', 'Фаска 45°', 'Фаска 45° + радиус']
         },
       ]
     if (attributes.mobile)
@@ -59,11 +51,6 @@ mixin aside
                       .tooltip
                         .checkbox__text.tooltip__row
                           |ISO2X
-                          //- span.tooltip__span
-                            .tooltip__icon 
-                              +tooltip-svg.tooltip__svg
-                        //- .tooltip__container   
-                          |#{data.tooltipText}
         .aside__card
           .aside__container 
             h5.aside__title 
@@ -92,17 +79,131 @@ mixin aside
                     .checkbox__text 
                       |Работают без СОЖ (только сквозные отверстия)
       else
+        .aside__card
+          .aside__container(data-aside-block='') 
+            .aside__top
+              h5.aside__title 
+                |Размер резьбы
+              .aside__clear.hidden(data-clear-block='')
+                .aside__clear-svg 
+                  +trash-svg 
+                .aside__clear-text 
+                  |Очистить
+            .aside__selects.aside__inner
+              .aside__select
+                .select-wrapper 
+                  .select.select--small
+                    select.select__mobile(name='cat-mob' data-select-mobile=''  data-select-control='') 
+                      option(value="" selected disabled)
+                        |Выбрать
+                      each item in data.selectValues.threadSize
+                        option(value=item)
+                          |#{item} 
+                    select.select__select(data-select-placeholder='Выбрать' style='width: 100%'  data-select-control='')
+                      option(value='' disabled selected)
+                      each item in data.selectValues.threadSize
+                        option(value=item)
+                          |#{item} 
+              .aside__char
+                |х
+              .aside__select
+                .select-wrapper 
+                  .select.select--small
+                    select.select__mobile(name='cat-mob' data-select-mobile=''   data-select-control='') 
+                      option(value="" selected disabled)
+                        |Выбрать
+                      each item in data.selectValues.threadSize
+                        option(value=item)
+                          |#{item} 
+                    select.select__select(data-select-placeholder='Выбрать' style='width: 100%'   data-select-control='')
+                      option(value='' disabled selected)
+                      each item in data.selectValues.threadSize
+                        option(value=item)
+                          |#{item} 
+        .aside__card
+          .aside__container(data-aside-block='') 
+            .aside__top
+              h5.aside__title 
+                |Размер резьбы
+              .aside__clear.hidden(data-clear-block='')
+                .aside__clear-svg 
+                  +trash-svg 
+                .aside__clear-text 
+                  |Очистить
+            .aside__inner
+              .select-wrapper 
+                .select.select--small
+                  select.select__mobile(name='cat-mob' data-select-mobile=''  data-select-control='') 
+                    option(value="" selected disabled)
+                      |Выбрать
+                    each item in data.selectValues.threadSize
+                      option(value=item)
+                        |#{item} 
+                  select.select__select(data-select-placeholder='Выбрать' style='width: 100%'  data-select-control='')
+                    option(value='' disabled selected)
+                    each item in data.selectValues.threadSize
+                      option(value=item)
+                        |#{item} 
+        .aside__card
+          .aside__container(data-aside-block='') 
+            .aside__top
+              h5.aside__title 
+                |Размер резьбы
+              .aside__clear.hidden(data-clear-block='')
+                .aside__clear-svg 
+                  +trash-svg 
+                .aside__clear-text 
+                  |Очистить
+            .aside__inner
+              .aside__spoiler(data-aside-accordion='')
+                .aside__spoiler-top(data-accordion-button='')
+                  .aside__spoiler-text(data-accordion-text='')
+                    |Выбрать
+                  .aside__spoiler-icon 
+                    +arrow-svg.aside__spoiler-svg
+                .aside__spoiler-dropdown(data-accordion-dropdown='')
+                  ul.aside__list
+                    li.aside__item 
+                      .checkbox 
+                        label.checkbox__label
+                          input.checkbox__input(type="checkbox" data-aside-checkbox='' data-accordion-checkbox='ISO2X')
+                          .checkbox__box 
+                            +check-svg.checkbox__svg
+                          .checkbox__text 
+                            |ISO2X
+                    li.aside__item 
+                      .checkbox 
+                        label.checkbox__label
+                          input.checkbox__input(type="checkbox" data-aside-checkbox='' data-accordion-checkbox='ISO3X')
+                          .checkbox__box 
+                            +check-svg.checkbox__svg
+                          .checkbox__text 
+                            |ISO3X
+                    li.aside__item 
+                      .checkbox 
+                        label.checkbox__label
+                          input.checkbox__input(type="checkbox" data-aside-checkbox='' data-accordion-checkbox='ISO4X')
+                          .checkbox__box 
+                            +check-svg.checkbox__svg
+                          .checkbox__text 
+                            |ISO4X
         each item in ddata
           .aside__card
-            .aside__container(data-accordion='') 
-              h5.aside__title 
-                |#{item.title}
+            .aside__container(data-accordion='' data-aside-block='') 
+              .aside__top
+                h5.aside__title 
+                  |#{item.title}
+                .aside__clear.hidden(data-clear-block='')
+                  .aside__clear-svg 
+                    +trash-svg 
+                  .aside__clear-text 
+                    |Очистить
               ul.aside__list.aside__inner
                 each el in item.items
                   li.aside__item 
                     .checkbox 
                       label.checkbox__label
-                        input.checkbox__input(type="checkbox")
+                        input.checkbox__input(type="checkbox" data-aside-checkbox='')
                         .checkbox__box 
                           +check-svg.checkbox__svg
                         .checkbox__text 
@@ -112,7 +213,7 @@ mixin aside
                   .aside__item 
                     .checkbox 
                       label.checkbox__label
-                        input.checkbox__input(type="checkbox")
+                        input.checkbox__input(type="checkbox" data-aside-checkbox='')
                         .checkbox__box 
                           +check-svg.checkbox__svg
                         .checkbox__text 
@@ -128,7 +229,7 @@ mixin aside
             h5.aside__title 
               |Тип фрезы, радиокнопки
             ul.aside__list.aside__inner
-              each el, index in ['Острая кромка', 'Фаска 45°', 'Фаска 45° + радиус']
+              each el, index in ['Неважно' ,'Острая кромка', 'Фаска 45°', 'Фаска 45° + радиус']
                 li.aside__item 
                   .radio 
                     label.radio__label
@@ -154,24 +255,23 @@ mixin aside
                 .button-show__icon 
                   +arrow-svg.button-show__svg
         if (attributes.range)
-          - for (x = 0; x < 2; x++)
-            .aside__card(data-range-block='')
-              .aside__container 
-                h5.aside__title 
-                  |Диаметр фрезы, мм
-                .range.aside__inner
-                  .range__top 
-                    .range__row(data-range)
-                      .range__item 
-                        label.range__label
-                          span.range__text 
-                            |от
-                          input.range__input(type="number" min='5' max='10' value='5' data-range-1)
-                      .range__item 
-                        label.range__label
-                          span.range__text 
-                            |до
-                          input.range__input(type="number" min='5' max='10' value='10' data-range-2)
+          .aside__card(data-range-block='')
+            .aside__container 
+              h5.aside__title 
+                |Диаметр фрезы, мм
+              .range.aside__inner
+                .range__top 
+                  .range__row(data-range)
+                    .range__item 
+                      label.range__label
+                        span.range__text 
+                          |от
+                        input.range__input(type="number" min='5' max='10' value='5' data-range-1)
+                    .range__item 
+                      label.range__label
+                        span.range__text 
+                          |до
+                        input.range__input(type="number" min='5' max='10' value='10' data-range-2)
           .aside__card
             .aside__container 
               h5.aside__title 
