--- a/src/views/components/aside.pug
+++ b/src/views/components/aside.pug
@@ -91,6 +91,12 @@ mixin aside
                   |Очистить
             .aside__selects.aside__inner
               .aside__select
+                -
+                  var items = [
+                    {text: 'ISO2X', options: ['asd', 'qwe',]},
+                    {text: 'ISO3X', options: ['zxc', 'cvbn',]},
+                    {text: 'ISO4X', options: ['123', '456',]}
+                  ]
                 .select-wrapper 
                   .select.select--small
                     select.select__mobile(name='cat-mob' data-select-mobile=''  data-select-control='') 
@@ -101,12 +107,12 @@ mixin aside
                           |#{item} 
                     select.select__select(data-select-placeholder='Выбрать' style='width: 100%'  data-select-control='')
                       option(value='' disabled selected)
-                      each item in data.selectValues.threadSize
-                        option(value=item)
-                          |#{item} 
+                      each item in items
+                        option(value=item.text)
+                          |#{item.text} 
               .aside__char
                 |х
-              .aside__select
+              .aside__select.disabled
                 .select-wrapper 
                   .select.select--small
                     select.select__mobile(name='cat-mob' data-select-mobile=''   data-select-control='') 
@@ -117,9 +123,9 @@ mixin aside
                           |#{item} 
                     select.select__select(data-select-placeholder='Выбрать' style='width: 100%'   data-select-control='')
                       option(value='' disabled selected)
-                      each item in data.selectValues.threadSize
-                        option(value=item)
-                          |#{item} 
+                      //- each item in data.selectValues.threadSize
+                      //-   option(value=item)
+                      //-     |#{item} 
         .aside__card
           .aside__container(data-aside-block='') 
             .aside__top
@@ -303,7 +309,9 @@ mixin aside
                   .aside__clear-text 
                     |Очистить
               .aside__inner
-                input.form__input.form__input--sm(type="text" value='2000' data-aside-input='')
+                input.form__input.form__input--sm(type="text" value='' data-aside-input='')
+              .aside__error.hidden
+                |Нет товаров с таким значением
       if (attributes.clear)
         .aside__btn
           .clear-button(data-clear-button='')
